samples/_failures_safe/1761309813_5d98b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db16f314.c: In function ‘main’:
./samples/SAFE/__tmp_db16f314.c:132:5: error: expected declaration or statement at end of input
  132 |     if (count == 0) {
      |     ^~
./samples/SAFE/__tmp_db16f314.c:132:5: error: expected declaration or statement at end of input
